--- a/src/utilities/typography.css
+++ b/src/utilities/typography.css
@@ -17,8 +17,8 @@
   --tw-prose-pre-code: var(--color-base);
   --tw-prose-pre-bg: var(--color-on-base);
 
-  --tw-prose-th-borders: var(--color-neutral);
-  --tw-prose-td-borders: var(--color-neutral);
+  --tw-prose-th-borders: var(--color-base-soft);
+  --tw-prose-td-borders: var(--color-base-soft);
   --tw-prose-captions: var(--color-on-neutral);
   --tw-prose-kbd: var(--color-body);
 
